modification de text

--- a/equipement.html
+++ b/equipement.html
@@ -22,7 +22,7 @@
      conference hall
     </div>
     <div class="col order-first">
-      10 meeting rooms
+      meeting rooms
     </div>
   </div>
 </div>
