--- a/carousel.html
+++ b/carousel.html
@@ -57,17 +57,17 @@
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="https://via.placeholder.com/1400x400.png" alt="First slide">
+                <img class="d-block w-100" src="images/Incubateur.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="https://via.placeholder.com/1400x400.png" alt="Second slide">
+                <img class="d-block w-100" src="images/lblf-jardin-terrasse.png" alt="Second slide" >
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="https://via.placeholder.com/1400x400.png" alt="Third slide">
+                <img class="d-block w-100" src="images/terrasse-leswitch.jpg" alt="Third slide" >
             </div>
             </div>
         </div>
-        
+
         <div class="container-fluid descriptionbuttons">
             <div class="row justify-content-around">
             <span class="badge badge-pill badge-light col-2">Lille</span>
