--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
 
-    <title>Hello, world!</title>
+    <title>Ecosystème numérique Lillois</title>
 </head>
 
 <body>
