--- a/equipement.html
+++ b/equipement.html
@@ -19,23 +19,23 @@
       Espace VIP
     </div>
     <div class="col">
-     conference hall
+     <i class='fas fa-building' style='font-size:15px'> conference hall</i>
     </div>
     <div class="col order-first">
-      meeting rooms
+      <i class='far fa-building' style='font-size:15px'>  10 meeting rooms</i>
     </div>
   </div>
 </div>
  <div class="container">
   <div class="row">
-    <div class="col order-last">
-      Atrium
+    <div class="col order-last"><i class='fas fa-university' style='font-size:15px'>  Atrium</i>
+    
     </div>
     <div class="col">
      Auditorium
     </div>
-    <div class="col order-first">
-      1coworking room
+    <div class="col order-first"><i class='fas fa-city' style='font-size:15px'> 1coworking room</i>
+      
     </div>
   </div>
 </div>
