modified startup-about fileAAAAAAAAAA

--- a/companyAbout/companyAbout-Sabine.html
+++ b/companyAbout/companyAbout-Sabine.html
@@ -18,7 +18,7 @@
           <div>
             <h2>THE COMPANY</h2>
           </div>
-          <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae voluptate dolore perspiciatis inventore cumque nobis? Odio, ducimus quis doloremque minus quaerat necessitatibus tempore laudantium veniam possimus sapiente non nesciunt maiores! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam dolor ex tempore iure reiciendis optio, ipsam explicabo suscipit qui, repellendus nihil sunt voluptas? Doloremque facere impedit magni? Voluptatum, cum mollitia.</div>
+          <div>AAAAAAAAAAALorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae voluptate dolore perspiciatis inventore cumque nobis? Odio, ducimus quis doloremque minus quaerat necessitatibus tempore laudantium veniam possimus sapiente non nesciunt maiores! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam dolor ex tempore iure reiciendis optio, ipsam explicabo suscipit qui, repellendus nihil sunt voluptas? Doloremque facere impedit magni? Voluptatum, cum mollitia.</div>
           <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam dolor ex tempore iure reiciendis optio, ipsam explicabo suscipit qui, repellendus nihil sunt voluptas? Doloremque facere impedit magni? Voluptatum, cum mollitia.</div>
           <div>
             <div class="row justify-content-around my-5 p-0">
